--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
                 </ul>
             </nav>
             <ul class="auth-nav list">
-                <li><a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="auth-nav-link link">
+                    <svg class="auth-nav-icon" width="16" height="12" >
+                        <use href="./images/symbol-optimize.svg#icon-mail"></use>
+                    </svg>
+                    info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="auth-nav-link link">
+                    <svg class="auth-nav-icon" width="10" height="16">
+                        <use href="./images/symbol-optimize.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
