add features icon

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <ul class="auth-nav list">
                 <li><a href="mailto:info@devstudio.com" class="auth-nav-link link">
                     <svg class="auth-nav-icon" width="16" height="12" >
-                        <use href="./images/symbol-optimize.svg#icon-mail"></use>
+                        <use href="./images/symbol-optimize-full.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="auth-nav-link link">
                     <svg class="auth-nav-icon" width="10" height="16">
-                        <use href="./images/symbol-optimize.svg#icon-smartphone"></use>
+                        <use href="./images/symbol-optimize-full.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11</a></li>
             </ul>
@@ -54,21 +54,41 @@
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="features-list list">
                     <li class="features-list-item">
+                        <div class="icon-box">
+                            <svg class="features-icon" width="70" height="70" >
+                                <use href="./images/symbol-optimize-full.svg#icon-antenna-features"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="features-description">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
                     <li class="features-list-item">
+                        <div class="icon-box">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/symbol-optimize-full.svg#icon-clock-features"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальность</h3>
                         <p class="features-description">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
                     <li class="features-list-item">
+                        <div class="icon-box">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/symbol-optimize-full.svg#icon-diagram-features"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Планирование</h3>
                         <p class="features-description">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li class="features-list-item">
+                        <div class="icon-box">
+                            <svg class="features-icon" width="70" height="70">
+                                <use href="./images/symbol-optimize-full.svg#icon-astronaut-features"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Современные технологии</h3>
                         <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
