add team and clients icon

--- a/index.html
+++ b/index.html
@@ -116,6 +116,28 @@
                         <div class="team-title-container">
                             <h3 class="title">Игорь Демьяненко</h3>
                             <p class="team-description">Product Designer</p>
+                            <ul class="team-list-icon list">
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon">
+                                        <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon">
+                                        <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon">
+                                        <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon">
+                                        <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -123,6 +145,28 @@
                         <div class="team-title-container">
                             <h3 class="title">Ольга Репина</h3>
                             <p class="team-description">Frontend Developer</p>
+                            <ul class="team-list-icon list">
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -130,17 +174,104 @@
                         <div class="team-title-container">
                             <h3 class="title">Николай Тарасов</h3>
                             <p class="team-description">Marketing</p>
-                        </div>
+                            <ul class="team-list-icon list">
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/imgcard4.jpg" class="team-list-img" width="270" alt="фото Михаил Ермаков">
                         <div class="team-title-container">
                             <h3 class="title">Михаил Ермаков</h3>
                             <p class="team-description">UI Designer</p>
+                            <ul class="team-list-icon list">
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                        <svg class="soc-icon">
+                                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
            </div>
+        </section>
+        <!-- ***** clients ****** -->
+        <section class="clients section">
+          <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="client-list list">
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-list-item"><a href="" class="list-icon-area">
+                            <svg class="client-icon">
+                                <use href="./images/symbol-optimize-full.svg#icon-logo-client6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+          </div>
         </section>
     </main>
     <footer class="footer">
