footer  and portfolio
icon , hover button and card

--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
                             <p class="team-description">Product Designer</p>
                             <ul class="team-list-icon list">
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                    <svg class="soc-icon">
+                                    <svg class="soc-icon" width="20" height="20">
                                         <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                    <svg class="soc-icon">
+                                    <svg class="soc-icon" width="20" height="20">
                                         <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
                                     </svg>
                                 </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                    <svg class="soc-icon">
+                                    <svg class="soc-icon" width="20" height="20">
                                         <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
                                     </svg>
                                 </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                    <svg class="soc-icon">
+                                    <svg class="soc-icon" width="20" height="20">
                                         <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
                                     </svg>
                                 </a></li>
@@ -145,28 +145,28 @@
                         <div class="team-title-container">
                             <h3 class="title">Ольга Репина</h3>
                             <p class="team-description">Frontend Developer</p>
-                            <ul class="team-list-icon list">
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a></li>
-                            </ul>
+                        <ul class="team-list-icon list">
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                        </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -174,28 +174,28 @@
                         <div class="team-title-container">
                             <h3 class="title">Николай Тарасов</h3>
                             <p class="team-description">Marketing</p>
-                            <ul class="team-list-icon list">
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a></li>
-                                <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
-                                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a></li>
-                            </ul>
+                        <ul class="team-list-icon list">
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="team-soc-item"><a href="" class="soc-icon-area">
+                                    <svg class="soc-icon" width="20" height="20">
+                                        <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                        </ul>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/imgcard4.jpg" class="team-list-img" width="270" alt="фото Михаил Ермаков">
@@ -204,22 +204,22 @@
                             <p class="team-description">UI Designer</p>
                             <ul class="team-list-icon list">
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
+                                        <svg class="soc-icon" width="20" height="20">
                                             <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
                                         </svg>
                                     </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
+                                        <svg class="soc-icon" width="20" height="20">
                                             <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
                                         </svg>
                                     </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
+                                        <svg class="soc-icon" width="20" height="20">
                                             <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
                                         </svg>
                                     </a></li>
                                 <li class="team-soc-item"><a href="" class="soc-icon-area">
-                                        <svg class="soc-icon">
+                                        <svg class="soc-icon" width="20" height="20">
                                             <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
                                         </svg>
                                     </a></li>
@@ -235,37 +235,37 @@
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="client-list list">
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-list-item"><a href="" class="list-icon-area">
-                            <svg class="client-icon">
+                            <svg class="client-icon" width="106" height="60">
                                 <use href="./images/symbol-optimize-full.svg#icon-logo-client6"></use>
                             </svg>
                         </a>
@@ -276,15 +276,43 @@
     </main>
     <footer class="footer">
        <div class="container">
-            <a href="./index.html" class="logo foot"><span class="logo-accent">Web</span>Studio</a>
-            <address>
-                <ul class="foot-address list">
-                    <li class="foot-addres-item"><a href="https://goo.gl/maps/qU6M2Eqe6EST1Lpy9" target="_blank" rel="noopener noreferrer nofollow"
-                            class="address-link maps-link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="foot-addres-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
-                    <li class="foot-addres-item"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+            <div class="address-box">
+                <a href="./index.html" class="logo foot"><span class="logo-accent">Web</span>Studio</a>
+                <address>
+                    <ul class="foot-address list">
+                        <li class="foot-addres-item"><a href="https://goo.gl/maps/qU6M2Eqe6EST1Lpy9" target="_blank"
+                                rel="noopener noreferrer nofollow" class="address-link maps-link">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="foot-addres-item"><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
+                        </li>
+                        <li class="foot-addres-item"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+                    </ul>
+            </div>
+            <div class="join-box">
+                <h3 class="title">присоединяйтесь</h3>
+                <ul class="team-list-icon list">
+                    <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                            <svg class="soc-icon" width="20" height="20">
+                                <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                    <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                            <svg class="soc-icon" width="20" height="20">
+                                <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                            <svg class="soc-icon" width="20" height="20">
+                                <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                            <svg class="soc-icon" width="20" height="20">
+                                <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
                 </ul>
-            
+            </div>
             </address>
        </div>
     </footer>
