--- a/portfolio.html
+++ b/portfolio.html
@@ -54,69 +54,85 @@
                 </ul>
                 <ul class="works-list list">
                     <li class="works-list-item">
-                        <img src="./images/imgport1.jpg" width="370" alt="сайт технокряк">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Технокряк</h2>
-                            <p class="works-description">Веб-сайт</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport1.jpg" width="370" alt="сайт технокряк">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Технокряк</h2>
+                                <p class="works-description">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport2.jpg" width="370" alt="два баскетболиста борятся за мяч">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="works-description">Дизайн</p>
-                        </div>
+                       <a href="" class="works-item-link">
+                            <img src="./images/imgport2.jpg" width="370" alt="два баскетболиста борятся за мяч">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="works-description">Дизайн</p>
+                            </div>
+                       </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport3.jpg" width="370" alt="изображение рыбы с названием ресторана">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Ресторан Seafood</h2>
-                            <p class="works-description">Приложение</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport3.jpg" width="370" alt="изображение рыбы с названием ресторана">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Ресторан Seafood</h2>
+                                <p class="works-description">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport4.jpg" width="370" alt="черные стерео наушники">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Проект Prime</h2>
-                            <p class="works-description">Маркетинг</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport4.jpg" width="370" alt="черные стерео наушники">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Проект Prime</h2>
+                                <p class="works-description">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport5.jpg" width="370" alt="две коробки белая и коричневая">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Проект Boxes</h2>
-                            <p class="works-description">Приложение</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport5.jpg" width="370" alt="две коробки белая и коричневая">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Проект Boxes</h2>
+                                <p class="works-description">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport6.jpg" width="370" alt="монитор на котором изображена карта мира ">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Inspiration has no Borders</h2>
-                            <p class="works-description">Веб-сайт</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport6.jpg" width="370" alt="монитор на котором изображена карта мира ">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Inspiration has no Borders</h2>
+                                <p class="works-description">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport7.jpg" width="370" alt="женский журнал">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Издание Limited Edition</h2>
-                            <p class="works-description">Дизайн</p>
-                        </div>
-                        
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport7.jpg" width="370" alt="женский журнал">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Издание Limited Edition</h2>
+                                <p class="works-description">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport8.jpg" width="370" alt="белая этикетка с надписью">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Проект LAB</h2>
-                            <p class="works-description">Маркетинг</p>
-                        </div>
-                        
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport8.jpg" width="370" alt="белая этикетка с надписью">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Проект LAB</h2>
+                                <p class="works-description">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images/imgport9.jpg" width="370" alt="на ноутбуке изображена страничка сайта">
-                        <div class="works-title-container">
-                            <h2 class="works-title">Growing Business</h2>
-                            <p class="works-description">Приложение</p>
-                        </div>
+                        <a href="" class="works-item-link">
+                            <img src="./images/imgport9.jpg" width="370" alt="на ноутбуке изображена страничка сайта">
+                            <div class="works-title-container">
+                                <h2 class="works-title">Growing Business</h2>
+                                <p class="works-description">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
           </div>
@@ -125,17 +141,46 @@
   
 <footer class="footer">
     <div class="container">
-        <a href="./index.html" class="logo foot"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="foot-address list">
-                <li class="foot-addres-item"><a href="https://goo.gl/maps/qU6M2Eqe6EST1Lpy9" target="_blank"
-                        rel="noopener noreferrer nofollow" class="address-link maps-link">г. Киев, пр-т Леси Украинки,
-                        26</a></li>
-                <li class="foot-addres-item"><a href="mailto:info@devstudio.com"
-                        class="address-link">info@devstudio.com</a></li>
-                <li class="foot-addres-item"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
+        <div class="address-box">
+            <a href="./index.html" class="logo foot"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="foot-address list">
+                    <li class="foot-addres-item"><a href="https://goo.gl/maps/qU6M2Eqe6EST1Lpy9" target="_blank"
+                            rel="noopener noreferrer nofollow" class="address-link maps-link">г. Киев, пр-т Леси
+                            Украинки, 26</a>
+                    </li>
+                    <li class="foot-addres-item"><a href="mailto:info@devstudio.com"
+                            class="address-link">info@devstudio.com</a>
+                    </li>
+                    <li class="foot-addres-item"><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+        </div>
+        <div class="join-box">
+            <h3 class="title">присоединяйтесь</h3>
+            <ul class="team-list-icon list">
+                <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                        <svg class="soc-icon" width="20" height="20">
+                            <use href="./images/symbol-optimize-full.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                        <svg class="soc-icon" width="20" height="20">
+                            <use href="./images/symbol-optimize-full.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                        <svg class="soc-icon" width="20" height="20">
+                            <use href="./images/symbol-optimize-full.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                <li class="team-soc-item"><a href="" class="soc-icon-area box-area-color">
+                        <svg class="soc-icon" width="20" height="20">
+                            <use href="./images/symbol-optimize-full.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
             </ul>
-
+        </div>
         </address>
     </div>
 </footer>
